--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/home"
+        android:id="@+id/bottom_nav_dashboard"
         android:icon="@drawable/ic_dashboard"
         android:title="Dashboard"
         app:cnb_iconColor="@color/purple_500"/>
     <item
-        android:id="@+id/activity"
+        android:id="@+id/bottom_nav_orders"
         android:icon="@drawable/ic_orders"
         android:title="Orders"
         app:cnb_iconColor="@color/purple_500"/>
     <item
-        android:id="@+id/favorites"
+        android:id="@+id/bottom_nav_map"
         android:icon="@drawable/ic_map"
         android:title="Map"
         app:cnb_iconColor="@color/purple_500" />
     <item
-        android:id="@+id/settings"
+        android:id="@+id/bottom_nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile"
         app:cnb_iconColor="@color/purple_500" />
