--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,20 +5,20 @@
         android:id="@+id/bottom_nav_dashboard"
         android:icon="@drawable/ic_dashboard"
         android:title="Dashboard"
-        app:cnb_iconColor="@color/purple_500"/>
+        app:cnb_iconColor="@color/green_600"/>
     <item
         android:id="@+id/bottom_nav_orders"
         android:icon="@drawable/ic_orders"
         android:title="Orders"
-        app:cnb_iconColor="@color/purple_500"/>
+        app:cnb_iconColor="@color/green_600"/>
     <item
         android:id="@+id/bottom_nav_map"
         android:icon="@drawable/ic_map"
         android:title="Map"
-        app:cnb_iconColor="@color/purple_500" />
+        app:cnb_iconColor="@color/green_600" />
     <item
         android:id="@+id/bottom_nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile"
-        app:cnb_iconColor="@color/purple_500" />
+        app:cnb_iconColor="@color/green_600" />
 </menu>
