--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="green_200">#FFE1F2EF</color>
+    <color name="green_600">#FF33A594</color>
+    <color name="blue_100">#FFBCDCFF</color>
+    <color name="blue_500">#FF318CFF</color>
+    <color name="blue_800">#FF3B58D7</color>
+    <color name="glow_red">#40FECCBE</color>
+    <color name="glow_red_transparent">#00FECCBE</color>
+    <color name="red_100">#FFffe0dc</color>
+    <color name="red_300">#FFff7d62</color>
+    <color name="red_500">#FFff4d49</color>
+    <color name="red_800">#FFD84121</color>
+    <color name="yellow_100">#FFFFF2D9</color>
+    <color name="yellow_500">#FFFFAA00</color>
+    <color name="yellow_800">#FFFE7F00</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#FF242424</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
