--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -39,4 +39,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/you_got_n_orders_left" />
+
+    <ProgressBar
+        android:id="@+id/orders_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/ordersRecyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/ordersRecyclerView"
+        app:layout_constraintStart_toStartOf="@+id/ordersRecyclerView"
+        app:layout_constraintTop_toTopOf="@+id/ordersRecyclerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
