--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".view.DashboardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <TextView
         android:id="@+id/textView2"
         style="@style/headline6"
@@ -64,26 +62,49 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/delayed_frame"
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/rounded_card"
-        android:tint="@color/red_100"
+        app:tint="@color/red_100"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/no_internet_frame"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/rounded_card"
+        app:tint="@color/yellow_100"
+        app:layout_constraintEnd_toEndOf="@+id/view3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintTop_toBottomOf="@+id/delayed_frame" />
+
+    <ImageView
+        android:id="@+id/delayed_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:src="@drawable/ic_alert"
-        android:tint="@color/red_500"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:tint="@color/red_500"
+        app:layout_constraintBottom_toBottomOf="@+id/delayed_frame"
+        app:layout_constraintStart_toStartOf="@+id/delayed_frame"
+        app:layout_constraintTop_toTopOf="@+id/delayed_frame" />
+
+    <ImageView
+        android:id="@+id/no_internet_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_caution"
+        app:tint="@color/yellow_500"
+        app:layout_constraintBottom_toBottomOf="@+id/no_internet_frame"
+        app:layout_constraintStart_toStartOf="@+id/no_internet_frame"
+        app:layout_constraintTop_toTopOf="@+id/no_internet_frame" />
 
     <TextView
         android:id="@+id/textView3"
@@ -93,9 +114,9 @@
         android:layout_marginStart="10dp"
         android:text="Three"
         android:textColor="@color/red_500"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/delayed_frame"
+        app:layout_constraintStart_toEndOf="@+id/delayed_icon"
+        app:layout_constraintTop_toTopOf="@+id/delayed_frame" />
 
     <TextView
         android:id="@+id/textView9"
@@ -107,9 +128,24 @@
         android:maxLines="1"
         android:text=" deliveries are delayed by 48 hours!"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/delayed_frame"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/no_internet_text"
+        style="@style/headline3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="There is no internet connection!"
+        app:layout_constraintBottom_toBottomOf="@+id/no_internet_frame"
+        app:layout_constraintEnd_toEndOf="@+id/no_internet_frame"
+        app:layout_constraintStart_toEndOf="@+id/no_internet_icon"
+        app:layout_constraintTop_toTopOf="@+id/no_internet_frame" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -117,7 +153,7 @@
         android:layout_height="88dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/circle"
-        android:tint="@color/green_200"
+        app:tint="@color/green_200"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
@@ -175,7 +211,7 @@
         android:layout_height="88dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/circle"
-        android:tint="@color/green_200"
+        app:tint="@color/green_200"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toTopOf="@+id/view3" />
@@ -184,9 +220,22 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
         app:elevation="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView10"
+        style="@style/headline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="92dp"
+        android:text="Scan codebar"
+        android:textColor="@color/green_600"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
