--- a/app/src/main/res/layout/layout_list_order.xml
+++ b/app/src/main/res/layout/layout_list_order.xml
@@ -25,24 +25,11 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="TODO"
-        app:layout_constraintBottom_toBottomOf="@+id/order_email"
         app:layout_constraintStart_toStartOf="@+id/order_ticket"
-        app:layout_constraintTop_toTopOf="@+id/order_name"
-        app:srcCompat="@drawable/circle" />
-
-    <ImageView
-        android:id="@+id/order_avatar_icon"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/order_avatar"
-        app:layout_constraintEnd_toEndOf="@+id/order_avatar"
-        app:layout_constraintStart_toStartOf="@+id/order_avatar"
-        app:layout_constraintTop_toTopOf="@+id/order_avatar"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_user"
-        app:tint="@color/black" />
+        app:layout_constraintTop_toTopOf="@+id/order_ticket"
+        app:srcCompat="@drawable/rounded_card" />
 
     <TextView
         android:id="@+id/order_name"
@@ -50,12 +37,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:text="Abderrahman Errached Tlili"
         app:layout_constraintEnd_toEndOf="@+id/order_ticket"
         app:layout_constraintStart_toEndOf="@+id/order_avatar"
-        app:layout_constraintTop_toTopOf="@+id/order_ticket" />
+        app:layout_constraintTop_toTopOf="@+id/order_avatar" />
 
     <TextView
         android:id="@+id/order_email"
@@ -96,10 +82,10 @@
         android:id="@+id/order_address"
         style="@style/headline1"
         android:layout_width="0dp"
-        android:layout_height="22dp"
+        android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Rue st. Michelle "
+        android:maxLines="2"
+        android:text="Rue st. Michelle 3eme arrondissement Paris"
         app:layout_constraintEnd_toEndOf="@+id/order_address_title"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/order_address_title"
@@ -129,7 +115,7 @@
         app:layout_constraintEnd_toEndOf="@+id/order_email"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/order_ic_phone_number_circle"
-        app:layout_constraintTop_toBottomOf="@+id/order_email" />
+        app:layout_constraintTop_toBottomOf="@+id/order_avatar" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
