--- a/app/src/main/res/layout/layout_list_product.xml
+++ b/app/src/main/res/layout/layout_list_product.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toStartOf="@+id/product_vertical_guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/rounded_card" />
 
     <TextView
         android:id="@+id/product_name"
