jit nl3abha 9afaz w saye

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_card"
-        android:onClick="confirmInput"
+        android:onClick="login"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="@+id/input_field_password"
         app:layout_constraintStart_toStartOf="@+id/input_field_password"
